--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -3,18 +3,21 @@ on:
   workflow_dispatch:
   push:
     branches:
-    - AE
-    - rel-*
+      - AE 
+      - rel-*
   pull_request:
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
+
 env:
   ORT_NIGHTLY_REST_API: "https://feeds.dev.azure.com/aiinfra/PublicPackages/_apis/packaging/Feeds/ORT-Nightly/packages?packageNameQuery=Microsoft.ML.OnnxRuntime&api-version=6.0-preview.1"
   ORT_PACKAGE_NAME: "Microsoft.ML.OnnxRuntime"
   ORT_NIGHTLY_SOURCE: "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/ORT-Nightly/nuget/v3/index.json"
   # ANDROID_ABI: "arm64-v8a"
   ANDROID_ABI: "x86_64"
+
 jobs:
   android_x64:
     # Note: linux is the only good option for the Android emulator currently.
@@ -22,6 +25,7 @@ jobs:
     #         HVF error: HV_UNSUPPORTED
     #       it works on macos-13 but with macos-15 being released soon that isn't a long term solution.
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout OnnxRuntime GenAI repo
         uses: actions/checkout@v4
@@ -69,7 +73,7 @@ jobs:
           echo "$ORT_NIGHTLY_VERSION"
           echo "ORT_NIGHTLY_VERSION=$ORT_NIGHTLY_VERSION" >> $GITHUB_ENV
 
-      # have to create a dummy project to use `add package`
+      # Have to create a dummy project to use `add package`
       - name: Download OnnxRuntime Nightly
         run: |
           dotnet new console
@@ -99,7 +103,29 @@ jobs:
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
 
+      # - name: Run Android tests
+      #   run: |
+      #     set -e -x
+      #     ./build.sh --android --android_api=27 --android_ndk_path=${ANDROID_NDK_LATEST_HOME} --config=RelWithDebInfo --android_abi=${{ env.ANDROID_ABI }} --parallel --build_java --android_run_emulator --test
+
       - name: Run Android tests
         run: |
           set -e -x
-          ./build.sh --android --android_api=27 --android_ndk_path=${ANDROID_NDK_LATEST_HOME} --config=RelWithDebInfo --android_abi=${{ env.ANDROID_ABI }} --parallel --build_java --android_run_emulator --test
+
+            # Ensure Android SDK tools are installed
+            echo "Installing required Android SDK components..."
+            yes | sdkmanager "platform-tools" "emulator" "system-images;android-27;default;x86_64"
+
+          # Set the ANDROID_HOME environment variable if not already set
+            export ANDROID_HOME=/usr/local/lib/android/sdk
+            export ANDROID_SDK_ROOT=$ANDROID_HOME
+
+            # Check if emulator is installed
+              if [ ! -f "$ANDROID_HOME/emulator/emulator" ]; then
+             echo "Emulator not found at $ANDROID_HOME/emulator/emulator. Exiting..."
+           exit 1
+            fi
+
+            # Run the build script with the appropriate flags
+             ./build.sh --android --android_api=27 --android_ndk_path=${ANDROID_NDK_LATEST_HOME} --config=RelWithDebInfo --android_abi=${{ env.ANDROID_ABI }} --parallel --build_java --android_run_emulator --test
+
