--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - AE 
+      - AE
       - rel-*
   pull_request:
 
@@ -15,15 +15,10 @@ env:
   ORT_NIGHTLY_REST_API: "https://feeds.dev.azure.com/aiinfra/PublicPackages/_apis/packaging/Feeds/ORT-Nightly/packages?packageNameQuery=Microsoft.ML.OnnxRuntime&api-version=6.0-preview.1"
   ORT_PACKAGE_NAME: "Microsoft.ML.OnnxRuntime"
   ORT_NIGHTLY_SOURCE: "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/ORT-Nightly/nuget/v3/index.json"
-  # ANDROID_ABI: "arm64-v8a"
   ANDROID_ABI: "x86_64"
 
 jobs:
   android_x64:
-    # Note: linux is the only good option for the Android emulator currently.
-    #       it doesn't work on macos-14.
-    #         HVF error: HV_UNSUPPORTED
-    #       it works on macos-13 but with macos-15 being released soon that isn't a long term solution.
     runs-on: ubuntu-latest
 
     steps:
@@ -62,11 +57,6 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
-      - name: Checkout OnnxRuntime GenAI repo
-        uses: actions/checkout@v4
-        with:
-          submodules: true
-
       - name: Get the Latest OnnxRuntime Nightly Version
         run: |
           ORT_NIGHTLY_VERSION=$(curl -s "${{ env.ORT_NIGHTLY_REST_API }}" | jq -r '.value[0].versions[0].normalizedVersion')
@@ -103,29 +93,34 @@ jobs:
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
 
-      # - name: Run Android tests
-      #   run: |
-      #     set -e -x
-      #     ./build.sh --android --android_api=27 --android_ndk_path=${ANDROID_NDK_LATEST_HOME} --config=RelWithDebInfo --android_abi=${{ env.ANDROID_ABI }} --parallel --build_java --android_run_emulator --test
+      # Install Android SDK command line tools
+      - name: Install Android SDK command line tools
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y wget unzip
+          wget https://dl.google.com/android/repository/commandlinetools-linux-6858069_latest.zip
+          unzip commandlinetools-linux-6858069_latest.zip -d $HOME/android-sdk
+          sudo mv $HOME/android-sdk/cmdline-tools $HOME/android-sdk/cmdline-tools-latest
+          echo "export ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
+          echo "export ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
+          echo "export PATH=\$PATH:\$ANDROID_HOME/cmdline-tools/latest/bin" >> $GITHUB_ENV
 
+      # Ensure Android SDK tools are installed
+      - name: Installing required Android SDK components...
+        run: |
+          sdkmanager --update
+          sdkmanager "platform-tools" "emulator" "system-images;android-27;default;x86_64"
+
+      # Run Android tests with the emulator
       - name: Run Android tests
         run: |
           set -e -x
 
-            # Ensure Android SDK tools are installed
-            echo "Installing required Android SDK components..."
-            yes | sdkmanager "platform-tools" "emulator" "system-images;android-27;default;x86_64"
+          # Check if emulator is installed
+          if [ ! -f "$ANDROID_HOME/emulator/emulator" ]; then
+            echo "Emulator not found at $ANDROID_HOME/emulator/emulator. Exiting..."
+            exit 1
+          fi
 
-          # Set the ANDROID_HOME environment variable if not already set
-            export ANDROID_HOME=/usr/local/lib/android/sdk
-            export ANDROID_SDK_ROOT=$ANDROID_HOME
-
-            # Check if emulator is installed
-              if [ ! -f "$ANDROID_HOME/emulator/emulator" ]; then
-             echo "Emulator not found at $ANDROID_HOME/emulator/emulator. Exiting..."
-           exit 1
-            fi
-
-            # Run the build script with the appropriate flags
-             ./build.sh --android --android_api=27 --android_ndk_path=${ANDROID_NDK_LATEST_HOME} --config=RelWithDebInfo --android_abi=${{ env.ANDROID_ABI }} --parallel --build_java --android_run_emulator --test
-
+          # Run the build script with the appropriate flags
+          ./build.sh --android --android_api=27 --android_ndk_path=${ANDROID_NDK_LATEST_HOME} --config=RelWithDebInfo --android_abi=${{ env.ANDROID_ABI }} --parallel --build_java --android_run_emulator --test
