--- a/.github/workflows/android-build1.yml
+++ b/.github/workflows/android-build1.yml
@@ -58,6 +58,13 @@ jobs:
           sdkmanager --update
           sdkmanager "platform-tools" "emulator" "system-images;android-27;default;x86_64" "platforms;android-27"
 
+      # Verify SDK Tools Installation (added for debugging)
+      - name: Verify SDK Tools Installation
+        run: |
+          echo $ANDROID_HOME
+          sdkmanager --version
+          sdkmanager --list
+
       # Create Android build
       - name: Create Android build
         run: |
@@ -84,3 +91,4 @@ jobs:
           set -e -x
           $ANDROID_HOME/emulator/emulator -avd test_avd -no-window -no-audio -gpu off &
           adb wait-for-device
+
