--- a/.github/workflows/android-build1.yml
+++ b/.github/workflows/android-build1.yml
@@ -3,24 +3,25 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - AE
-      - rel-*
+    - AE
+    - rel-*
   pull_request:
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
-
 env:
   ORT_NIGHTLY_REST_API: "https://feeds.dev.azure.com/aiinfra/PublicPackages/_apis/packaging/Feeds/ORT-Nightly/packages?packageNameQuery=Microsoft.ML.OnnxRuntime&api-version=6.0-preview.1"
   ORT_PACKAGE_NAME: "Microsoft.ML.OnnxRuntime"
   ORT_NIGHTLY_SOURCE: "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/ORT-Nightly/nuget/v3/index.json"
+  # ANDROID_ABI: "arm64-v8a"
   ANDROID_ABI: "x86_64"
-
 jobs:
   android_x64:
+    # Note: linux is the only good option for the Android emulator currently.
+    #       it doesn't work on macos-14.
+    #         HVF error: HV_UNSUPPORTED
+    #       it works on macos-13 but with macos-15 being released soon that isn't a long term solution.
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout OnnxRuntime GenAI repo
         uses: actions/checkout@v4
@@ -39,67 +40,58 @@ jobs:
         with:
           gradle-version: '8.6'
 
+      # Check the NDK that we're using
+      - name: Check Android NDKs
+        run: |
+          set -e -x
+          uname -m
+          echo "ANDROID_NDK_HOME=$ANDROID_NDK_HOME"
+          echo "ANDROID_NDK_LATEST_HOME=$ANDROID_NDK_LATEST_HOME"
+          ls -l $ANDROID_HOME/ndk
+      # Needed for linux
+      - name: Install jq
+        run: |
+          sudo apt-get install jq
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
 
-      # Install Android SDK components manually
-      - name: Install Android SDK components
+      - name: Checkout OnnxRuntime GenAI repo
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+
+      - name: Get the Latest OnnxRuntime Nightly Version
         run: |
-          sudo apt-get update
-          sudo apt-get install -y wget unzip
-          mkdir -p $HOME/Android/Sdk
-          cd $HOME/Android/Sdk
-          
-          # Download SDK command line tools
-          wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip
-          unzip commandlinetools-linux-8512546_latest.zip
-          rm commandlinetools-linux-8512546_latest.zip
-
-          # Set environment variables
-          echo "export ANDROID_HOME=$HOME/Android/Sdk" >> ~/.bashrc
-          echo "export ANDROID_SDK_ROOT=$HOME/Android/Sdk" >> ~/.bashrc
-          echo "export PATH=\$PATH:\$ANDROID_HOME/cmdline-tools/latest/bin" >> ~/.bashrc
-          source ~/.bashrc
-
-          # Verify sdkmanager location
-          echo "sdkmanager location: $(which sdkmanager)"
-          
-          # Install SDK components
-          yes | sdkmanager --licenses
-          sdkmanager --update
-          sdkmanager "platform-tools" "emulator" "system-images;android-27;default;x86_64" "platforms;android-27"
-
-      # Verify SDK Tools Installation
-      - name: Verify SDK Tools Installation
+          ORT_NIGHTLY_VERSION=$(curl -s "${{ env.ORT_NIGHTLY_REST_API }}" | jq -r '.value[0].versions[0].normalizedVersion')
+          echo "$ORT_NIGHTLY_VERSION"
+          echo "ORT_NIGHTLY_VERSION=$ORT_NIGHTLY_VERSION" >> $GITHUB_ENV
+      # have to create a dummy project to use `add package`
+      - name: Download OnnxRuntime Nightly
         run: |
-          echo $ANDROID_HOME
-          sdkmanager --version
-          sdkmanager --list
-
-      # Create Android build
+          dotnet new console
+          dotnet add package ${{ env.ORT_PACKAGE_NAME }} --version ${{ env.ORT_NIGHTLY_VERSION }} --source ${{ env.ORT_NIGHTLY_SOURCE }} --package-directory .
+      - name: Extract ONNX Runtime AAR
+        run: |
+          set -e -x
+          ls -l
+          unzip microsoft.ml.onnxruntime/${{ env.ORT_NIGHTLY_VERSION }}/runtimes/android/native/onnxruntime.aar -d ort
+          ls -lR ort
       - name: Create Android build
         run: |
           set -e -x
           rm -rf build
           ./build.sh --android --android_api=27 --android_ndk_path=${ANDROID_NDK_LATEST_HOME} --config=RelWithDebInfo --android_abi=${{ env.ANDROID_ABI }} --parallel --build_java --update
-
-      # Run Android build
       - name: Run Android build
         run: |
           set -e -x
           ./build.sh --android --android_api=27 --android_ndk_path=${ANDROID_NDK_LATEST_HOME} --config=RelWithDebInfo --android_abi=${{ env.ANDROID_ABI }} --parallel --build_java --build
-
-      # Enable KVM group perms so Android emulator can run
-      - name: Enable KVM group perms
+      - name: Enable KVM group perms so Android emulator can run
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
-
-      # Run the Android Emulator
-      - name: Run Android Emulator
+      - name: Run Android tests
         run: |
           set -e -x
-          $ANDROID_HOME/emulator/emulator -avd test_avd -no-window -no-audio -gpu off &
-          adb wait-for-device
+          ./build.sh --android --android_api=27 --android_ndk_path=${ANDROID_NDK_LATEST_HOME} --config=RelWithDebInfo --android_abi=${{ env.ANDROID_ABI }} --parallel --build_java --android_run_emulator --test
